--- a/styles.css
+++ b/styles.css
@@ -508,9 +508,22 @@ small {
     }
 }
 
+
+/* ----------------- SECTION HEADERS -----------------*/
 #plan-your-trip > h2,
 #testimonials > h2,
 #about-your-destination > h2 {
     grid-column: 1 / -1;  
     margin-bottom: 1.5rem;
+}
+
+
+/* ----------------- SKIP LINKS -----------------*/
+
+.skip-links {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: .5rem;
+    z-index: 1000;
 }
